Test postman and swagger
